--- a/BasicSample/BasicSample/Main.storyboard
+++ b/BasicSample/BasicSample/Main.storyboard
@@ -1,7 +1,57 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="jeX-iI-dJz">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Main View Controller-->
+        <scene sceneID="Kjh-z5-3wV">
+            <objects>
+                <viewController storyboardIdentifier="FSViewController" title="Main View Controller" useStoryboardIdentifierAsRestorationIdentifier="YES" id="jeX-iI-dJz" customClass="FSViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Oyg-rV-hMj">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ForeSee_logo_RGB" translatesAutoresizingMaskIntoConstraints="NO" id="SXv-ME-ahT">
+                                <rect key="frame" x="109" y="120" width="156" height="70"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="156" id="6kz-6u-CvU"/>
+                                    <constraint firstAttribute="height" constant="70" id="SoB-rK-qgV"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4yo-5R-QGz">
+                                <rect key="frame" x="20" y="241" width="335" height="30"/>
+                                <color key="backgroundColor" red="1" green="0.203183381597562" blue="0.26627630118835244" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <state key="normal" title="Show Invite"/>
+                                <connections>
+                                    <action selector="showInvite:" destination="jeX-iI-dJz" eventType="touchUpInside" id="sMF-cE-Afw"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="SXv-ME-ahT" firstAttribute="centerX" secondItem="cUa-i2-lU8" secondAttribute="centerX" id="4tD-W0-fDk"/>
+                            <constraint firstItem="4yo-5R-QGz" firstAttribute="leading" secondItem="cUa-i2-lU8" secondAttribute="leading" constant="20" id="KcV-dl-3Nc"/>
+                            <constraint firstItem="SXv-ME-ahT" firstAttribute="top" secondItem="cUa-i2-lU8" secondAttribute="top" constant="100" id="e60-BZ-rdm"/>
+                            <constraint firstItem="cUa-i2-lU8" firstAttribute="trailing" secondItem="4yo-5R-QGz" secondAttribute="trailing" constant="20" id="eBd-gR-0gw"/>
+                            <constraint firstItem="4yo-5R-QGz" firstAttribute="top" secondItem="SXv-ME-ahT" secondAttribute="bottom" constant="51" id="mKl-we-Zjr"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="cUa-i2-lU8"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="P9N-7p-AEr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="73" y="163"/>
+        </scene>
+    </scenes>
+    <resources>
+        <image name="ForeSee_logo_RGB" width="854" height="383"/>
+    </resources>
 </document>
