--- a/CustomInvitationSample/CustomInvitationSample/Base.lproj/Main.storyboard
+++ b/CustomInvitationSample/CustomInvitationSample/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -38,8 +39,8 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pSE-L7-day" userLabel="Show Custom Invite">
-                                <rect key="frame" x="20" y="174" width="335" height="34"/>
-                                <color key="backgroundColor" red="1" green="0.203183381597562" blue="0.26627630118835244" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <rect key="frame" x="26" y="194" width="323" height="34"/>
+                                <color key="backgroundColor" red="0.92156862745098034" green="0.16862745098039217" blue="0.23921568627450979" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="tintColor" red="0.097796724979999999" green="0.14065014889999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Custom Invite">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -49,11 +50,11 @@
                                     <segue destination="bSi-nl-Gvc" kind="show" id="avf-cB-gpd"/>
                                 </connections>
                             </button>
-                            <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gb3-8G-MaM" userLabel="Show Custom Invite #2">
-                                <rect key="frame" x="20" y="228" width="335" height="34"/>
-                                <color key="backgroundColor" red="1" green="0.20318338159999999" blue="0.26627630120000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gb3-8G-MaM" userLabel="Show Snackbar Invite">
+                                <rect key="frame" x="26" y="248" width="323" height="34"/>
+                                <color key="backgroundColor" red="0.92156862745098034" green="0.16862745098039217" blue="0.23921568627450979" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="tintColor" red="0.097796724979999999" green="0.14065014889999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <state key="normal" title="Custom Invite #2">
+                                <state key="normal" title="Custom &quot;Snackbar&quot; Invite">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <color key="titleShadowColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
@@ -72,13 +73,13 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="ubK-vn-88u" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="5n4-Is-fao"/>
-                            <constraint firstItem="gb3-8G-MaM" firstAttribute="left" secondItem="8bC-Xf-vdC" secondAttribute="left" constant="20" id="7ZC-XK-D68"/>
+                            <constraint firstItem="gb3-8G-MaM" firstAttribute="left" secondItem="8bC-Xf-vdC" secondAttribute="leftMargin" constant="10" id="7ZC-XK-D68"/>
                             <constraint firstItem="gb3-8G-MaM" firstAttribute="top" secondItem="pSE-L7-day" secondAttribute="bottom" constant="20" id="CHr-br-bEg"/>
                             <constraint firstItem="pSE-L7-day" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="DbA-Fz-ZdA"/>
                             <constraint firstItem="ubK-vn-88u" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="h6c-pl-cLv"/>
                             <constraint firstItem="gb3-8G-MaM" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="jck-Vq-3jV"/>
-                            <constraint firstItem="pSE-L7-day" firstAttribute="top" secondItem="ubK-vn-88u" secondAttribute="bottom" constant="20" id="mbt-e1-MqE"/>
-                            <constraint firstItem="pSE-L7-day" firstAttribute="left" secondItem="8bC-Xf-vdC" secondAttribute="left" constant="20" id="peF-UN-7ZW"/>
+                            <constraint firstItem="pSE-L7-day" firstAttribute="top" secondItem="ubK-vn-88u" secondAttribute="bottom" constant="40" id="mbt-e1-MqE"/>
+                            <constraint firstItem="pSE-L7-day" firstAttribute="left" secondItem="8bC-Xf-vdC" secondAttribute="leftMargin" constant="10" id="peF-UN-7ZW"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Choose an invite" id="aL0-h6-Rg3"/>
@@ -100,8 +101,8 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wrb-cA-fYg" userLabel="Show Custom Invite">
-                                <rect key="frame" x="20" y="237" width="335" height="34"/>
-                                <color key="backgroundColor" red="1" green="0.20318338159999999" blue="0.26627630120000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <rect key="frame" x="26" y="237" width="323" height="34"/>
+                                <color key="backgroundColor" red="0.92156862745098034" green="0.16862745098039217" blue="0.23921568627450979" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="tintColor" red="0.097796724979999999" green="0.14065014889999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Show Custom Invite">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -112,7 +113,7 @@
                                 </connections>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" scrollEnabled="NO" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="SWz-h0-V9z">
-                                <rect key="frame" x="20" y="84" width="335" height="133"/>
+                                <rect key="frame" x="26" y="84" width="323" height="133"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" priority="250" constant="120" id="leX-Cv-DSg"/>
@@ -126,8 +127,8 @@
                         <constraints>
                             <constraint firstItem="Wrb-cA-fYg" firstAttribute="top" secondItem="SWz-h0-V9z" secondAttribute="bottom" constant="20" id="BDW-mV-wzc"/>
                             <constraint firstItem="SWz-h0-V9z" firstAttribute="centerX" secondItem="3bJ-Tb-F6W" secondAttribute="centerX" id="MPL-Zs-f14"/>
-                            <constraint firstItem="SWz-h0-V9z" firstAttribute="left" secondItem="3bJ-Tb-F6W" secondAttribute="left" constant="20" id="gDl-QH-kz9"/>
-                            <constraint firstItem="Wrb-cA-fYg" firstAttribute="left" secondItem="3bJ-Tb-F6W" secondAttribute="left" constant="20" id="hj9-va-ON9"/>
+                            <constraint firstItem="SWz-h0-V9z" firstAttribute="left" secondItem="3bJ-Tb-F6W" secondAttribute="leftMargin" constant="10" id="gDl-QH-kz9"/>
+                            <constraint firstItem="Wrb-cA-fYg" firstAttribute="left" secondItem="3bJ-Tb-F6W" secondAttribute="leftMargin" constant="10" id="hj9-va-ON9"/>
                             <constraint firstItem="SWz-h0-V9z" firstAttribute="top" secondItem="QdI-hD-Dad" secondAttribute="bottom" constant="20" id="hsx-no-Hhw"/>
                             <constraint firstItem="Wrb-cA-fYg" firstAttribute="centerX" secondItem="3bJ-Tb-F6W" secondAttribute="centerX" id="zSO-eZ-DY3"/>
                         </constraints>
@@ -153,8 +154,8 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cqy-6Y-wEX" userLabel="Show Custom Invite">
-                                <rect key="frame" x="20" y="287.5" width="335" height="34"/>
-                                <color key="backgroundColor" red="1" green="0.20318338159999999" blue="0.26627630120000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <rect key="frame" x="26" y="287.5" width="323" height="34"/>
+                                <color key="backgroundColor" red="0.92156862745098034" green="0.16862745098039217" blue="0.23921568627450979" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="tintColor" red="0.097796724979999999" green="0.14065014889999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Show Custom Invite">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -165,7 +166,7 @@
                                 </connections>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" scrollEnabled="NO" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="uqb-hI-g8B">
-                                <rect key="frame" x="20" y="84" width="335" height="183.5"/>
+                                <rect key="frame" x="26" y="84" width="323" height="183.5"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" priority="250" constant="180" id="u8V-ac-he6"/>
@@ -180,8 +181,8 @@
                             <constraint firstItem="uqb-hI-g8B" firstAttribute="centerX" secondItem="RhN-Fm-S53" secondAttribute="centerX" id="Bhz-qe-9oF"/>
                             <constraint firstItem="Cqy-6Y-wEX" firstAttribute="centerX" secondItem="RhN-Fm-S53" secondAttribute="centerX" id="Lsf-YQ-WJe"/>
                             <constraint firstItem="uqb-hI-g8B" firstAttribute="top" secondItem="cgo-B5-38q" secondAttribute="bottom" constant="20" id="PyF-4v-000"/>
-                            <constraint firstItem="uqb-hI-g8B" firstAttribute="left" secondItem="RhN-Fm-S53" secondAttribute="left" constant="20" id="hud-fq-fhf"/>
-                            <constraint firstItem="Cqy-6Y-wEX" firstAttribute="left" secondItem="RhN-Fm-S53" secondAttribute="left" constant="20" id="skK-wt-IPt"/>
+                            <constraint firstItem="uqb-hI-g8B" firstAttribute="left" secondItem="RhN-Fm-S53" secondAttribute="leftMargin" constant="10" id="hud-fq-fhf"/>
+                            <constraint firstItem="Cqy-6Y-wEX" firstAttribute="left" secondItem="RhN-Fm-S53" secondAttribute="leftMargin" constant="10" id="skK-wt-IPt"/>
                             <constraint firstItem="Cqy-6Y-wEX" firstAttribute="top" secondItem="uqb-hI-g8B" secondAttribute="bottom" constant="20" id="vWU-UE-pEn"/>
                         </constraints>
                     </view>
