--- a/ContactInvitationSample/ContactInvitationSample/Main.storyboard
+++ b/ContactInvitationSample/ContactInvitationSample/Main.storyboard
@@ -113,10 +113,10 @@
             </objects>
             <point key="canvasLocation" x="268" y="251"/>
         </scene>
-        <!--View Controller-->
+        <!--Custom Invite View Controller-->
         <scene sceneID="qgg-yb-1Wi">
             <objects>
-                <viewController id="1cA-qD-uyG" sceneMemberID="viewController">
+                <viewController id="1cA-qD-uyG" customClass="CustomInviteViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="mst-Lg-qcw">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -127,6 +127,9 @@
                                 <state key="normal" title="Accept">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="handleAcceptButtonTouchUpInside:" destination="1cA-qD-uyG" eventType="touchUpInside" id="drz-gI-eCc"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cug-U4-ysJ">
                                 <rect key="frame" x="20" y="182" width="334" height="30"/>
@@ -134,6 +137,9 @@
                                 <state key="normal" title="Decline">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="handleDeclineButtonTouchUpInside:" destination="1cA-qD-uyG" eventType="touchUpInside" id="EZj-0c-v96"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -147,6 +153,10 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="9a8-aC-Far"/>
                     </view>
+                    <connections>
+                        <outlet property="inviteAcceptButton" destination="Pg4-Pf-Rhg" id="e84-Vc-BrE"/>
+                        <outlet property="inviteDeclineButton" destination="cug-U4-ysJ" id="uvB-6o-0H4"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nty-dU-5Wb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
